[package]
name = "protobuf"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"


[dependencies]
bytes = "0.5"
chrono = "0.4"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
warp-protobuf = "0.1"

[build-dependencies]
prost-build = "0.6"